# sobel-photonicsens

./: README.MD
cpp/: README.MD  meson.build
cpp/src/: sobel_photonicsens.cpp
cpp/src/sobel/: opencl_engine.cpp  opencl_engine.h  software_engine.cpp  software_engine.h
rs/: Cargo.toml  README.MD
rs/src/: main.rs  sobel.rs  test.rs
